# advent-2021

./: .gitignore  Cargo.toml  README.md  day19 visualization .ipynb
19/: 19_data.json  19_example.json  day19 visualization.ipynb
24/: 24.txt  24_check_answers.c  24_generated.c  24_simplified.c  24_simplified_2.c  README.md
src/: lib.rs  main.rs  results.rs
src/days/: common.rs  day.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day20b.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
