[package]
name = "advent-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
name = "advent_2021_proc_macros"

[dependencies]
itertools = "0.10"
pathfinding = "3.0"
bitvec = "0.22"
ndarray = "0.15"
smallvec = "1.7"

[profile.release]
debug = 1
lto = "thin"
codegen-units = 1
